# interior-space-layout-design-agent-skill

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CLUSTER-INTEGRATION.md  LICENSE  PROJECT-DEVELOPMENT-PHASE-TRACKING.md  PROJECT-detail.md  README.md  SECOND-KNOWLEDGE-BRAIN.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
cron/: knowledge_updater.cron
skills/: main.md  sub-fengshui-overlay.md  sub-framework-selector.md  sub-improvement-roadmap.md  sub-profile-intake.md  sub-scoring-engine.md
src/interior_layout/: __init__.py  cli.py  cluster_contract.py  fengshui_overlay.py  framework_selector.py  frameworks.py  gates.py  improvement_roadmap.py  intake.py  knowledge_updater.py  main.py  schema.py  scoring_engine.py  synthesis.py
tests/: PASS_FAIL_LOG.md  results.json  run_scenarios.py  test-scenarios.md  test_harness.py
tests/data/: S1.json  S1_report.md  scenarios.json
tools/: knowledge_updater.py
